src/objects/HTB_Reporting_Dynamic__c.object
<CustomObject>
    <fields>
        <fullName>Account_status__c</fullName>
        <label>Account status</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Code__c</fullName>
        <label>Action Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrears_balance__c</fullName>
        <label>Arrears balance</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Behavioural_EAD__c</fullName>
        <label>Behavioural EAD</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Behavioural_LGD__c</fullName>
        <label>Behavioural LGD</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Behavioural_PD__c</fullName>
        <label>Behavioural PD</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collections_status__c</fullName>
        <label>Collections status</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_LTV__c</fullName>
        <label>Current LTV</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Product_Rate_Type__c</fullName>
        <label>Current Product Rate Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_balance__c</fullName>
        <label>Current balance</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_exposure__c</fullName>
        <label>Current exposure</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_interest_rate__c</fullName>
        <label>Current interest rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_payment_amount__c</fullName>
        <label>Customer payment amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_date__c</fullName>
        <label>Default date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBS_ID__c</fullName>
        <formula>HTB_Reporting_Static__r.Opportunity__r.Account.EBS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTB_Reporting_Month__c</fullName>
        <label>HTB Reporting Month</label>
        <referenceTo>HTB_Reporting_Month__c</referenceTo>
        <relationshipLabel>HTB Reporting Dynamics</relationshipLabel>
        <relationshipName>HTB_Reporting_Dynamics</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>HTB_Reporting_Static__c</fullName>
        <label>HTB Reporting Static</label>
        <referenceTo>HTB_Reporting_Static__c</referenceTo>
        <relationshipLabel>HTB Reporting Dynamic</relationshipLabel>
        <relationshipName>HTB_Reporting_Dynamic</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Indexed_property_value__c</fullName>
        <label>Indexed property value</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lender__c</fullName>
        <label>Lender</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Months_in_arrears__c</fullName>
        <label>Months in arrears</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_due__c</fullName>
        <label>Payment due</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Possession_date__c</fullName>
        <label>Possession date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Potential_Impairment_Indicators_1__c</fullName>
        <label>Potential Impairment Indicators 1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Impairment_Indicators_2__c</fullName>
        <label>Potential Impairment Indicators 2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Impairment_Indicators_3__c</fullName>
        <label>Potential Impairment Indicators 3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recovered_monies_after_claim__c</fullName>
        <label>Recovered monies after claim</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Redemption_date__c</fullName>
        <label>Redemption date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remaining_term__c</fullName>
        <label>Remaining term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_month__c</fullName>
        <label>Reporting month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_Reference__c</fullName>
        <formula>HTB_Reporting_Static__r.Unique_Reference__c</formula>
        <label>Unique Reference</label>
        <type>Text</type>
    </fields>
    <label>HTB Reporting Dynamic</label>
    <nameField>
        <label>HTB Reporting Dynamic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HTB Reporting Dynamic</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>